UI tweaks and wording

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO Meta Tags -->
-    <meta
+    <!-- SEO Meta Tags -->    <meta
       name="description"
-      content="F1 MCP LangGraph Client - Live Formula 1 data powered by MCP tools and production APIs"
+      content="F1 MCP LangGraph Client - Formula 1 data powered by MCP tools and production APIs"
     />
     <meta
       name="keywords"
-      content="Formula 1, F1, MCP, LangGraph, Racing Data, Live Data"
+      content="Formula 1, F1, MCP, LangGraph, Racing Data, Championship Data"
     />
     <meta name="author" content="F1 MCP LangGraph System" />
 
@@ -19,7 +18,7 @@
     <meta property="og:title" content="F1 MCP LangGraph Client" />
     <meta
       property="og:description"
-      content="Live Formula 1 data powered by MCP tools and production APIs"
+      content="Formula 1 data powered by MCP tools and production APIs"
     />
     <meta property="og:type" content="website" />
 
@@ -72,7 +71,7 @@
         <p style="font-size: 1rem; opacity: 0.8"
           >Loading production F1 data...</p
         >
-        <small style="opacity: 0.6">Connecting to live MCP services</small>
+        <small style="opacity: 0.6">Connecting to MCP services</small>
       </div>
     </div>
 
