--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO Meta Tags -->    <meta
+    <!-- SEO Meta Tags -->
+    <meta
       name="description"
       content="F1 MCP LangGraph Client - Formula 1 data powered by MCP tools and production APIs"
     />
@@ -34,7 +35,17 @@
 
     <!-- CSS will be injected by Vite -->
   </head>
-  <body>
+  <body
+    style="
+      background-image: url('/latest.jpg');
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-color: #111827;
+      min-height: 100vh;
+    "
+  >
     <!-- Loading Screen -->
     <div
       id="loading-screen"
